Blender 2.8 crashes in sculpt mode with hidden mask. #53806

Closed
opened 2018-01-16 20:06:22 +01:00 by Erick Tukuniata · 8 comments

System Information gtx 550 ti Win 7
Operating system and graphics card

Blender Version
Broken: (example: 2.69.7 4b206af, see splash screen)
Worked: (optional) Blender 2.80.3

Short description of error

In sculpt mode with Dyntopo activated, mask a part of the mesh and hide it, now try to go to edit mode or reveal the hidden part. Blender will crash :(

**System Information** gtx 550 ti Win 7 Operating system and graphics card **Blender Version** Broken: (example: 2.69.7 4b206af, see splash screen) Worked: (optional) Blender 2.80.3 **Short description of error** In sculpt mode with Dyntopo activated, mask a part of the mesh and hide it, now try to go to edit mode or reveal the hidden part. Blender will crash :(

Added subscriber: @ErickNyanduKabongo

Added subscriber: @ErickNyanduKabongo

Closed as duplicate of #53807

Closed as duplicate of #53807

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Changed status from 'Duplicate' to: 'Open'

Changed status from 'Duplicate' to: 'Open'
Campbell Barton was assigned by Dalai Felinto 2018-01-17 13:52:40 +01:00

How to reproduce it:
Open: about-to-crash-sculpt.blend

  • Toggle Dyntopo on/off
  • Sculpt some (Shift+F to increase brush a lot)
  • Toggle Dyntopo on/off again

If it doesn't happen right away, rinse and repeat.

Thread 1 "blender" received signal SIGSEGV, Segmentation fault.                                                                                                                                                                    
0x00005555598d07f8 in GWN_vertbuf_discard (verts=0x0) at /home/dfelinto/src/blender/blender/intern/gawain/src/gwn_vertex_buffer.c:75                                                                                               
75              if (verts->vbo_id)

Full backtrace: P592

How to reproduce it: Open: [about-to-crash-sculpt.blend](https://archive.blender.org/developer/F1866820/about-to-crash-sculpt.blend) * Toggle Dyntopo on/off * Sculpt some (Shift+F to increase brush a lot) * Toggle Dyntopo on/off again If it doesn't happen right away, rinse and repeat. ``` Thread 1 "blender" received signal SIGSEGV, Segmentation fault. 0x00005555598d07f8 in GWN_vertbuf_discard (verts=0x0) at /home/dfelinto/src/blender/blender/intern/gawain/src/gwn_vertex_buffer.c:75 75 if (verts->vbo_id) ``` Full backtrace: [P592](https://archive.blender.org/developer/P592.txt)

GPU_pbvh_mesh_buffers_update cleares vert_buf when there is no data, so committed NULL check when freeing. (9cac97fb3c)

But there is something strange happening still - colors flicker when painting between light/dark (happens with Eevee but not Clay engine).

Maybe worth closing this and opening a new report if @ErickNyanduKabongo can't redo any errors.

`GPU_pbvh_mesh_buffers_update` cleares `vert_buf` when there is no data, so committed NULL check when freeing. (9cac97fb3c) But there is something strange happening still - colors flicker when painting between light/dark (happens with Eevee but not Clay engine). Maybe worth closing this and opening a new report if @ErickNyanduKabongo can't redo any errors.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closing it now. I will report the light flickering issue separately.

Closing it now. I will report the light flickering issue separately.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53806
No description provided.