Fix sculpt error freeing NULL vertex buffer

Relates to T53806 which needs further investigation